# aviv

./: .gitignore  .projectile  Application.hs  Facebook.hs  Foundation.hs  Main.hs  aviv.cabal  build.sh  package.json  routes  stack.yaml  webpack.config.js
Handler/: Events.hs
app/: devel.hs
config/: Config.hs  keter.yml  routes
src/: index.js
src/actions/: index.js
src/containers/: AddTodo.js  VisibleTodoList.js
src/reducers/: events.js  index.js
static/: bundle.js  index.html  package.json
static/src/: index.js
static/src/components/: Footer.js  RefreshButton.js  Todo.js
static/src/reducers/: events.js  index.js
webapp/: LICENSE  bundle.js  index.html  package.json  webpack.config.js
webapp/src/: index.js
webapp/src/actions/: index.js
webapp/src/components/: About.js  App.js  EventDate.js  EventDescription.js  EventDetail.js  EventSummary.js  Events.js  Footer.js  Header.js  Past.js  Upcoming.js
webapp/src/containers/: App.js  AvivApp.js
webapp/src/reducers/: events.js  todos.js
webapp/src/stylesheets/: main.scss
webapp/src/stylesheets/components/: _about.scss  _all.scss  _event.scss  _eventdate.scss  _events.scss  _footer.scss  _header.scss
webapp/src/stylesheets/utils/: _all.scss  _lists.scss  _responsive.scss
webapp/src/utils/: devTools.js
