name:               aviv
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          aviv
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Add
                    Home

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , wai-app-static
                , yesod-core
                , yesod-static

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
