name:               aviv
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          aviv
  main-is:          Main.hs
  hs-source-dirs:   ., config
  other-modules:    Application
                    Foundation
                    Config

                    Add
                    Facebook
                    Home

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  aeson
                , base
                , bytestring
                , http-conduit
                , lens
                , lens-aeson
                , stringsearch
                , time
                , text
                , vector
                , wai
                , wai-app-static
                , wai-cors
                , warp
                , yaml
                , yesod-core
                , yesod-static

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
